aplicaciones/redmine/3_redmine-postgre-deploy-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine-postgresql
  namespace: redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine-postgresql
  template:
    metadata:
      labels:
        app: redmine-postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgresql-storage
      volumes:
      - name: postgresql-storage
        persistentVolumeClaim:
          claimName: pvc-postgresql
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-postgresql
  namespace: redmine
spec:
  ports:
  - port: 5432
  selector:
    app: redmine-postgresql
