aplicaciones/redmine/5_redmine-deploy-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
  namespace: redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - name: redmine
        image: redmine:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /usr/src/redmine/files
          name: redmine-storage
        resources: {}
      volumes:
      - name: redmine-storage
        persistentVolumeClaim:
          claimName: pvc-redmine
---
apiVersion: v1
kind: Service
metadata:
  name: redmine
  namespace: redmine
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: redmine
  type: ClusterIP
