aplicaciones/redmine/6_redmine-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine-ingress
  namespace: redmine
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /redmine/$1
spec:
  ingressClassName: nginx
  rules:
  - host: minikube.localhost
    http:
      paths:
      - path: /redmine/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: redmine-svc
            port:
              number: 3000
